# Crawling

./: README.md  config.json  ins_data.py  ins_url.py  pyproject.toml  requirements.txt
image_crawl/: config.json  main.py  utils.py
image_crwal/: README.md  crawler.py
instagram/: README.md  config.json  ins_data.py  ins_url.py  make_ocr_text.py
instagram/urls/: info.txt
results/: txt.txt
results/images/: txt.txt
youtube/: README.md  main.py  utils.py  youtube_crawler.py  youtube_keyword.json
youtube/data/: info.txt
