[tool.poetry]
name = "5-viral"
version = "0.1.0"
description = ""
authors = ["bkkhyunn <toiquen419@gmail.com>"]
readme = "README.md"
packages = [{include = "5"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
pandas = "^2.2.2"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
numpy = "<2.0"
paddleocr = "^2.8.1"
pytz = "^2024.1"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
